--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,10 @@
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    # Permitir imágenes remotas (Drive + proxy opcional)
+    Content-Security-Policy = "default-src 'self'; img-src 'self' data: blob: https: https://lh3.googleusercontent.com https://drive.google.com https://images.weserv.nl; media-src 'self' data: https:; connect-src 'self' https://opensheet.vercel.app https://lh3.googleusercontent.com https://drive.google.com https://images.weserv.nl; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; frame-src https://www.google.com https://drive.google.com;"
+    Referrer-Policy = "no-referrer"
